# Convolution-Caching

./: CMakeLists.txt  CachedLayer.h  ConvolutionCachedLayer.cpp  ConvolutionCachedLayer.h  ConvolutionLayer.cpp  ConvolutionLayer.h  FullyConnectedCachedLayer.cpp  FullyConnectedCachedLayer.h  FullyConnectedLayer.cpp  FullyConnectedLayer.h  Layer.h  Model.cpp  Model.h  README.md  convert_video_to_byte_array.py  main.cpp
lib/: Model.h
lib/layers/: CachedLayer.h  ConvolutionCachedLayer.cpp  ConvolutionCachedLayer.cu  ConvolutionCachedLayer.h  ConvolutionLayer.cpp  ConvolutionLayer.cu  ConvolutionLayer.h
src/: main.cpp
